# w3connect

./: BBS_CREATE_JD.md  BBS_LIST_JDS.md  BBS_POST_JD.md  BBS_UPDATE_JD.md  GET_ADDRESS.md  GET_BALANCE.md  README.md  SEND.md  SKILL.md  pyproject.toml  setup.py
w3connect/: __init__.py  b0x.py  bbs.py
