[project]
name = "w3connect"
version = "0.3.2"
authors = [
  { name="ModernMagicTechnology", email="kj@modernmagictechnology.com" },
]
description = "AI-native crypto key lockbox for chat based AI agent such as OpenClaw or Nanobot"
readme = "README.md"
requires-python = ">=3.8, <4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ModernMagicTechnology/w3connect"
Issues = "https://github.com/ModernMagicTechnology/w3connect/issues"

