[project]
name = "w3connect"
version = "0.4.1"
authors = [
  { name="ModernMagicTechnology", email="kj@modernmagictechnology.com" },
]
description = "AI-native crypto key lockbox for chat based AI agent such as OpenClaw or Nanobot"
readme = "README.md"
requires-python = ">=3.8, <4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "requests>=2.31.0",
    "web3>=6.0.0",
    "tornado>=6.0.0",
    "eth-account>=0.10.0",
    "qrcode>=8.0.0",
    "pyotp>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ModernMagicTechnology/w3connect"
Issues = "https://github.com/ModernMagicTechnology/w3connect/issues"

